Fix logo alignment

--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ button:hover {
 
   header {
     margin-top: 2rem;
-    margin-left: 12rem;
+    margin-left: 10rem;
     margin-bottom: 0;
   }
 
